--- a/REPOssessed/Resources/Languages/English.json
+++ b/REPOssessed/Resources/Languages/English.json
@@ -102,6 +102,8 @@
   "PlayersTab.TalkAll": "Talk All",
   "PlayersTab.TalkOthers": "Talk Others",
   "PlayersTab.HeldPhysGrabObject": "Held Phys Grab Object:",
+  "PlayersTab.ReviveAll": "Revive All",
+  "PlayersTab.ReviveOthers": "Revive Others",
   "EnemyTab.Title": "Enemies",
   "EnemyTab.EnemyList": "Enemy List",
   "EnemyTab.SpawnEnemies": "Spawn Enemies",
