--- a/REPOssessed/Resources/Languages/English.json
+++ b/REPOssessed/Resources/Languages/English.json
@@ -101,7 +101,7 @@
   "PlayersTab.Unblock": "Unblock",
   "PlayersTab.TalkAll": "Talk All",
   "PlayersTab.TalkOthers": "Talk Others",
-  "PlayersTab.HeldPhysGrabObject": "Held Phys Grab Object:",
+  "PlayersTab.HoldingItem": "Holding Item:",
   "PlayersTab.ReviveAll": "Revive All",
   "PlayersTab.ReviveOthers": "Revive Others",
   "EnemyTab.Title": "Enemies",
