--- a/REPOssessed/Resources/Languages/English.json
+++ b/REPOssessed/Resources/Languages/English.json
@@ -46,6 +46,9 @@
   "SelfTab.NoClip": "No Clip",
   "SelfTab.SuperSpeed": "Super Speed",
   "SelfTab.UnlimitedBattery": "Unlimited Battery",
+  "SelfTab.TeleportToTruck": "Teleport To Truck",
+  "SelfTab.TeleportTitle": "Teleport",
+  "SelfTab.Extraction": "Extraction",
   "VisualTab.Title": "Visual",
   "VisualTab.FOV": "FOV",
   "VisualTab.ESP": "ESP",
@@ -128,7 +131,6 @@
   "ServerTab.DisplayMapObjects": "Display Map Objects",
   "ServerTab.DisplayDeathHeads": "Display Death Heads",
   "ServerTab.ToggleAllInfoDisplays": "Toggle All Info Displays",
-  "ServerTab.TeleportToTruck": "Teleport To Truck",
   "FirstSetupManager.Title": "First Setup",
   "FirstSetupManager.Welcome": "Welcome to REPOssessed, Please choose your menu keybind and language.",
   "FirstSetupManager.SelectLanguage": "Select Language:",
