--- a/REPOssessed/Resources/Languages/English.json
+++ b/REPOssessed/Resources/Languages/English.json
@@ -39,8 +39,7 @@
   "SelfTab.NoTumble": "No Tumble",
   "SelfTab.InfiniteJump": "Infinite Jump",
   "SelfTab.Invisibility": "Invisibility",
-  "SelfTab.ChangeColor": "Change Color",
-  "SelfTab.RainbowMode": "Rainbow Mode",
+  "SelfTab.RainbowSuit": "Rainbow Suit",
   "SelfTab.UseSpoofedName": "Use Spoofed Name",
   "SelfTab.SpoofedName": "Spoofed Name",
   "SelfTab.NoObjectMoneyLoss": "No Object Money Loss",
@@ -72,22 +71,6 @@
   "PlayersTab.Health": "Health:",
   "PlayersTab.IsMasterClient": "Is Master Client:",
   "PlayersTab.REPOssessedUser": "REPOssessed User",
-  "PlayersTab.HealthUpgrade": "Health Upgrade:",
-  "PlayersTab.SetHealthUpgrade": "Set Health Upgrade",
-  "PlayersTab.SpeedUpgrade": "Speed Upgrade:",
-  "PlayersTab.SetSpeedUpgrade": "Set Speed Upgrade",
-  "PlayersTab.StrengthUpgrade": "Strength Upgrade:",
-  "PlayersTab.SetStrengthUpgrade": "Set Strength Upgrade",
-  "PlayersTab.ThrowStrengthUpgrade": "Throw Strength Upgrade:",
-  "PlayersTab.SetThrowStrengthUpgrade": "Set Throw Strength Upgrade",
-  "PlayersTab.RangeUpgrade": "Range Upgrade:",
-  "PlayersTab.SetRangeUpgrade": "Set Range Upgrade",
-  "PlayersTab.StaminaUpgrade": "Stamina Upgrade:",
-  "PlayersTab.SetStaminaUpgrade": "Set Stamina Upgrade",
-  "PlayersTab.JumpUpgrade": "Jump Upgrade:",
-  "PlayersTab.SetJumpUpgrade": "Set Jump Upgrade",
-  "PlayersTab.TumbleUpgrade": "Tumble Upgrade:",
-  "PlayersTab.SetTumbleUpgrade": "Set Tumble Upgrade",
   "PlayersTab.Heal": "Heal",
   "PlayersTab.Crown": "Crown",
   "PlayersTab.Kill": "Kill",
@@ -96,7 +79,7 @@
   "PlayersTab.ForceLand": "Force Land",
   "PlayersTab.ChatMessage": "Chat Message",
   "PlayersTab.ChangeColor": "Change Color",
-  "PlayersTab.LureMonsters": "Lure Monsters",
+  "PlayersTab.LureAllEnemies": "Lure All Enemies",
   "PlayersTab.PlayerList": "Player List",
   "PlayersTab.BlockRPCs": "Block RPCs",
   "PlayersTab.Send": "Send",
@@ -107,6 +90,11 @@
   "PlayersTab.HoldingItem": "Holding Item:",
   "PlayersTab.ReviveAll": "Revive All",
   "PlayersTab.ReviveOthers": "Revive Others",
+  "PlayersTab.Colors": "Colors:",
+  "PlayersTab.TeleportToPlayer": "Teleport To Player",
+  "PlayersTab.ChangeAllColors": "Change All Colors",
+  "PlayersTab.ChangeOthersColors": "Change Others Colors",
+  "PlayersTab.Crowned": "Crowned",
   "EnemyTab.Title": "Enemies",
   "EnemyTab.EnemyList": "Enemy List",
   "EnemyTab.SpawnEnemies": "Spawn Enemies",
@@ -124,6 +112,8 @@
   "EnemyTab.SpawnAmount": "Spawn Amount:",
   "EnemyTab.SelectedPlayer": "Selected Player:",
   "EnemyTab.Lure": "Lure",
+  "EnemyTab.LureAll": "Lure All",
+  "EnemyTab.TeleportToEnemy": "Teleport To Enemy",
   "ServerTab.Title": "Server",
   "ServerTab.Managers": "Managers",
   "ServerTab.ServerCheats": "Server Cheats",
@@ -131,6 +121,8 @@
   "ServerTab.ToggleInfoDisplay": "Toggle Info Display",
   "ServerTab.DisplayMapObjects": "Display Map Objects",
   "ServerTab.DisplayDeathHeads": "Display Death Heads",
+  "ServerTab.DisplayPlayers": "Display Players",
+  "ServerTab.DisplayEnemies": "Display Enemies",
   "ServerTab.ToggleAllInfoDisplays": "Toggle All Info Displays",
   "FirstSetupManager.Title": "First Setup",
   "FirstSetupManager.Welcome": "Welcome to REPOssessed, Please choose your menu keybind and language.",
@@ -144,5 +136,7 @@
   "ItemManager.Title": "Item Manager",
   "ItemManager.Amount": "Amount:",
   "Cheats.Info.DisplayMapObjects": "Map Objects: {0} ( {1} )",
-  "Cheats.Info.DisplayDeathHeads": "Death Heads: {0}"
+  "Cheats.Info.DisplayDeathHeads": "Death Heads: {0}",
+  "Cheats.Info.DisplayPlayers": "Players: {0}",
+  "Cheats.Info.DisplayEnemies": "Enemies: {0}"
 }
