--- a/REPOssessed/Resources/Languages/English.json
+++ b/REPOssessed/Resources/Languages/English.json
@@ -18,6 +18,7 @@
   "General.Waiting": "Waiting",
   "General.Search": "Search:",
   "General.Reset": "Reset",
+  "General.Complete": "Complete",
   "General.MustBeIngame": "You must be ingame to use this!",
   "GeneralTab.Title": "General",
   "SettingsTab.Title": "Settings",
@@ -75,8 +76,6 @@
   "PlayersTab.Crown": "Crown",
   "PlayersTab.Kill": "Kill",
   "PlayersTab.Revive": "Revive",
-  "PlayersTab.ForceJump": "Force Jump",
-  "PlayersTab.ForceLand": "Force Land",
   "PlayersTab.ChatMessage": "Chat Message",
   "PlayersTab.ChangeColor": "Change Color",
   "PlayersTab.LureAllEnemies": "Lure All Enemies",
@@ -101,7 +100,7 @@
   "EnemyTab.EnemyType": "Enemy Type",
   "EnemyTab.GeneralActions": "General Actions",
   "EnemyTab.KillAll": "Kill All",
-  "EnemyTab.MonsterActions": "Monster Actions",
+  "EnemyTab.EnemyActions": "Enemy Actions",
   "EnemyTab.Kill": "Kill",
   "EnemyTab.Damage": "Damage",
   "EnemyTab.Heal": "Heal",
@@ -114,6 +113,9 @@
   "EnemyTab.Lure": "Lure",
   "EnemyTab.LureAll": "Lure All",
   "EnemyTab.TeleportToEnemy": "Teleport To Enemy",
+  "EnemyTab.Health": "Health:",
+  "EnemyTab.MaxHealth": "Max Health:",
+  "EnemyTab.EnemyTarget": "Enemy Target",
   "ServerTab.Title": "Server",
   "ServerTab.Managers": "Managers",
   "ServerTab.ServerCheats": "Server Cheats",
@@ -124,6 +126,8 @@
   "ServerTab.DisplayPlayers": "Display Players",
   "ServerTab.DisplayEnemies": "Display Enemies",
   "ServerTab.ToggleAllInfoDisplays": "Toggle All Info Displays",
+  "ServerTab.Extraction": "Extraction",
+  "ServerTab.CompleteAllExtractions": "Complete All Extractions",
   "FirstSetupManager.Title": "First Setup",
   "FirstSetupManager.Welcome": "Welcome to REPOssessed, Please choose your menu keybind and language.",
   "FirstSetupManager.SelectLanguage": "Select Language:",
@@ -135,6 +139,12 @@
   "LootManager.TeleportAllItems": "Teleport All Items",
   "ItemManager.Title": "Item Manager",
   "ItemManager.Amount": "Amount:",
+  "LevelManager.Title": "Level Manager",
+  "LevelManager.CurrentLevel": "Current Level",
+  "LevelManager.Level": "Level:",
+  "LevelManager.Extractions": "Extractions:",
+  "LevelManager.ChangeLevel": "Change Level",
+  "LevelManager.Visit": "Visit",
   "Cheats.Info.DisplayMapObjects": "Map Objects: {0} ( {1} )",
   "Cheats.Info.DisplayDeathHeads": "Death Heads: {0}",
   "Cheats.Info.DisplayPlayers": "Players: {0}",
