--- a/REPOssessed/Resources/Languages/English.json
+++ b/REPOssessed/Resources/Languages/English.json
@@ -47,9 +47,13 @@
   "SelfTab.NoClip": "No Clip",
   "SelfTab.SuperSpeed": "Super Speed",
   "SelfTab.UnlimitedBattery": "Unlimited Battery",
-  "SelfTab.TeleportToTruck": "Teleport To Truck",
   "SelfTab.TeleportTitle": "Teleport",
+  "SelfTab.Teleport": "Teleport",
+  "SelfTab.Truck": "Truck",
   "SelfTab.Extraction": "Extraction",
+  "SelfTab.Cart": "Cart",
+  "SelfTab.NonEnemyTargetable": "Non Enemy Targetable",
+  "SelfTab.AlwaysShowLevel": "Always Show Level",
   "VisualTab.Title": "Visual",
   "VisualTab.FOV": "FOV",
   "VisualTab.ESP": "ESP",
@@ -94,6 +98,7 @@
   "PlayersTab.ChangeAllColors": "Change All Colors",
   "PlayersTab.ChangeOthersColors": "Change Others Colors",
   "PlayersTab.Crowned": "Crowned",
+  "PlayersTab.BreakHeldItem": "Break Held Item",
   "EnemyTab.Title": "Enemies",
   "EnemyTab.EnemyList": "Enemy List",
   "EnemyTab.SpawnEnemies": "Spawn Enemies",
@@ -128,6 +133,8 @@
   "ServerTab.ToggleAllInfoDisplays": "Toggle All Info Displays",
   "ServerTab.Extraction": "Extraction",
   "ServerTab.CompleteAllExtractions": "Complete All Extractions",
+  "ServerTab.SetCurrency": "Set Currency",
+  "ServerTab.BreakAllObjects": "Break All Objects",
   "FirstSetupManager.Title": "First Setup",
   "FirstSetupManager.Welcome": "Welcome to REPOssessed, Please choose your menu keybind and language.",
   "FirstSetupManager.SelectLanguage": "Select Language:",
