--- a/REPOssessed/Resources/Languages/English.json
+++ b/REPOssessed/Resources/Languages/English.json
@@ -82,6 +82,7 @@
   "PlayersTab.Revive": "Revive",
   "PlayersTab.ChatMessage": "Chat Message",
   "PlayersTab.ChangeColor": "Change Color",
+  "EnemyTab.TeleportAllEnemies": "Teleport All Enemies",
   "PlayersTab.LureAllEnemies": "Lure All Enemies",
   "PlayersTab.PlayerList": "Player List",
   "PlayersTab.BlockRPCs": "Block RPCs",
@@ -99,6 +100,9 @@
   "PlayersTab.ChangeOthersColors": "Change Others Colors",
   "PlayersTab.Crowned": "Crowned",
   "PlayersTab.BreakHeldItem": "Break Held Item",
+  "PlayersTab.TeleportPlayerToYou": "Teleport Player To You",
+  "PlayersTab.ForceTumble": "Force Tumble",
+  "PlayersTab.Damage": "Damage",
   "EnemyTab.Title": "Enemies",
   "EnemyTab.EnemyList": "Enemy List",
   "EnemyTab.SpawnEnemies": "Spawn Enemies",
@@ -118,6 +122,7 @@
   "EnemyTab.Lure": "Lure",
   "EnemyTab.LureAll": "Lure All",
   "EnemyTab.TeleportToEnemy": "Teleport To Enemy",
+  "EnemyTab.TeleportEnemyToPlayer": "Teleport Enemy To Player",
   "EnemyTab.Health": "Health:",
   "EnemyTab.MaxHealth": "Max Health:",
   "EnemyTab.EnemyTarget": "Enemy Target",
@@ -134,6 +139,7 @@
   "ServerTab.Extraction": "Extraction",
   "ServerTab.CompleteAllExtractions": "Complete All Extractions",
   "ServerTab.SetCurrency": "Set Currency",
+  "ServerTab.ForceThiefPunishment": "Force Thief Punishment",
   "ServerTab.BreakAllObjects": "Break All Objects",
   "FirstSetupManager.Title": "First Setup",
   "FirstSetupManager.Welcome": "Welcome to REPOssessed, Please choose your menu keybind and language.",
